fix(tasks): Remove spacing after task creator name in task card (#1133)

--- a/src/elements/content-sidebar/activity-feed/task-new/Task.scss
+++ b/src/elements/content-sidebar/activity-feed/task-new/Task.scss
@@ -112,8 +112,10 @@ $card-left-offset: 40px;
         margin-top: 5px;
     }
 
-    .bcs-comment-user-name {
-        margin-right: 0;
+    .bcs-comment {
+        .bcs-comment-user-name {
+            margin-right: 0;
+        }
     }
 
     button:first-of-type.bcs-task-action-button {
